// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  new: {
    id: 'App.Components.Greeting.hello',
    defaultMessage: 'id',
    description: 'describe text for translation'
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  new: {
    'id': 'GSplhw==',

    defaultMessage: 'id',
    description: 'describe text for translation'
  }
});
"
`;

exports[`basic 2`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  new: {
    id: 'App.Components.Greeting.hello',
    defaultMessage: 'id',
    description: 'describe text for translation'
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  new: {
    'id': 'GSplhw==',

    defaultMessage: 'id',
    description: 'describe text for translation'
  }
});
"
`;

exports[`missingId 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  new: {
    defaultMessage: 'missing id',
    description: 'should not fail when id is missing'
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  new: {
    defaultMessage: 'missing id',
    description: 'should not fail when id is missing'
  }
});
"
`;

exports[`missingId 2`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  new: {
    defaultMessage: 'missing id',
    description: 'should not fail when id is missing'
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  new: {
    defaultMessage: 'missing id',
    description: 'should not fail when id is missing'
  }
});
"
`;

exports[`stringId 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  new: {
    \\"id\\": \\"App.Components.Greeting.hello\\",
    \\"defaultMessage\\": \\"id\\",
    \\"description\\": \\"describe text for translation\\"
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  new: {
    \\"id\\": \\"GSplhw==\\",

    \\"defaultMessage\\": \\"id\\",
    \\"description\\": \\"describe text for translation\\"
  }
});
"
`;

exports[`stringId 2`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  new: {
    \\"id\\": \\"App.Components.Greeting.hello\\",
    \\"defaultMessage\\": \\"id\\",
    \\"description\\": \\"describe text for translation\\"
  }
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  new: {
    \\"id\\": \\"GSplhw==\\",

    \\"defaultMessage\\": \\"id\\",
    \\"description\\": \\"describe text for translation\\"
  }
});
"
`;
